--- a/src/app/modules/todo/components/form-todo/form-todo.component.html
+++ b/src/app/modules/todo/components/form-todo/form-todo.component.html
@@ -1,48 +1,63 @@
 <form [formGroup]="data.todoForm" (ngSubmit)="submit()">
     <h2 matDialogTitle>
-        {{ 'todoPage.block.formTodo.title' | translate: ({ typeForm: data.currentAction === "ADD" ? 'add' : 'edit', dumbTrigger: currentLang } | ParamsTranslate) }}
+        <container-element [ngSwitch]="data.currentAction">
+            <some-element *ngSwitchCase="'ADD'">
+                <span class="material-icons">add</span>
+            </some-element>
+            <some-element *ngSwitchDefault>
+                <span class="material-icons">edit</span>
+            </some-element>
+        </container-element>
+        <span class="text-icons-middle">Todo</span>
     </h2>
     <mat-form-field class="example-full-width">
-        <mat-label>{{ 'todoPage.block.formTodo.labelTitle' | translate }}</mat-label>
+        <mat-label i18n="@@block-formTodo-labelTitle">Title</mat-label>
         <input matInput cdkFocusInitial formControlName="title">
-        <mat-error *ngIf="data.todoForm.get('title')?.errors?.required && data.todoForm.get('title')?.touched">
-            {{ 'todoPage.block.formTodo.messErrorRequiredTitle' | translate }}
+        <mat-error i18n="@@block-formTodo-messErrorRequiredTitle"
+            *ngIf="data.todoForm.get('title')?.errors?.required && data.todoForm.get('title')?.touched">
+            Title is required
         </mat-error>
-        <mat-error *ngIf="data.todoForm.get('title')?.hasError('titleExist') && data.todoForm.get('title')?.touched">
-            {{ 'todoPage.block.formTodo.messErrorExistTitle' | translate }}
+        <mat-error i18n="@@block-formTodo-messErrorExistTitle"
+            *ngIf="data.todoForm.get('title')?.hasError('titleExist') && data.todoForm.get('title')?.touched">
+            The title already exists
         </mat-error>
         <mat-error *ngIf="data.todoForm.get('title')?.hasError('maxlength') && data.todoForm.get('title')?.touched">
-            {{ 'todoPage.block.formTodo.messErrorMaxlength' | translate }} {{data.todoForm.get('title')?.errors.maxlength.requiredLength}} 
+            <span i18n="@@block-formTodo-messErrorMaxlength">Max length is: </span>
+            {{data.todoForm.get('title')?.errors.maxlength.requiredLength}}
         </mat-error>
     </mat-form-field>
     <mat-form-field class="example-full-width">
-        <mat-label>{{ 'todoPage.block.formTodo.labelCreator' | translate }}</mat-label>
+        <mat-label i18n="@@block-formTodo-labelCreator">Creator</mat-label>
         <input matInput formControlName="creator">
-        <mat-error *ngIf="data.todoForm.get('creator')?.errors?.required && data.todoForm.get('creator')?.touched">
-            {{ 'todoPage.block.formTodo.messErrorRequiredCreator' | translate }}
+        <mat-error i18n="@@block-formTodo-messErrorRequiredContent"
+            *ngIf="data.todoForm.get('creator')?.errors?.required && data.todoForm.get('creator')?.touched">
+            Content is required
         </mat-error>
         <mat-error *ngIf="data.todoForm.get('creator')?.hasError('maxlength') && data.todoForm.get('creator')?.touched">
-            {{ 'todoPage.block.formTodo.messErrorMaxlength' | translate }} {{data.todoForm.get('creator')?.errors.maxlength.requiredLength}} 
+            <span i18n="@@block-formTodo-messErrorMaxlength">Max length is: </span>
+            {{data.todoForm.get('creator')?.errors.maxlength.requiredLength}}
         </mat-error>
     </mat-form-field>
     <mat-form-field class="example-full-width">
-        <mat-label>{{ 'todoPage.block.formTodo.labelContent' | translate }}</mat-label>
+        <mat-label i18n="@@block-formTodo-labelContent">Content</mat-label>
         <textarea matInput formControlName="content"></textarea>
-        <mat-error *ngIf="data.todoForm.get('content')?.errors?.required && data.todoForm.get('content')?.touched">
-            {{ 'todoPage.block.formTodo.messErrorRequiredContent' | translate }}
+        <mat-error i18n="@@block-formTodo-messErrorRequiredContent"
+            *ngIf="data.todoForm.get('content')?.errors?.required && data.todoForm.get('content')?.touched">
+            Content is required
         </mat-error>
         <mat-error *ngIf="data.todoForm.get('content')?.hasError('maxlength') && data.todoForm.get('content')?.touched">
-            {{ 'todoPage.block.formTodo.messErrorMaxlength' | translate }} {{data.todoForm.get('content')?.errors.maxlength.requiredLength}} 
+            <span i18n="@@block-formTodo-messErrorMaxlength">Max length is: </span>
+            {{data.todoForm.get('content')?.errors.maxlength.requiredLength}}
         </mat-error>
     </mat-form-field>
     <mat-checkbox *ngIf="data.todoForm.get('completed')" formControlName="completed" class="example-margin">
         {{ 'todoPage.block.formTodo.labelCompleted' | translate }}
     </mat-checkbox>
     <mat-dialog-actions align="end">
-        <button mat-button type="button" (click)="cancel()">{{ 'cancel' | translate }}</button>
+        <button mat-button type="button" (click)="cancel()" i18n="@@block-formTodo-cancel">Cancel</button>
         <button mat-button type="submit" color="primary" [disabled]="data.todoForm.invalid || data.todoForm.pending">
             <span class="material-icons">done</span>
-            <span class="text-icons-middle"> {{ 'submit' | translate }} </span>
+            <span class="text-icons-middle" i18n="@@block-formTodo-submit"> Submit </span>
         </button>
     </mat-dialog-actions>
 </form>
