--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
         <span style="font-size: 14px" class="material-icons">language</span>
         <span class="text-icons-middle" i18n="@@language"> Language </span>
       </mat-label>
-      <mat-select [(ngModel)]="languageCurrent" (selectionChange)="switchLanguage($event)">
+      <mat-select [(value)]="localeId" (selectionChange)="switchLanguage($event)">
         <mat-option [value]="'en'">
           <span i18n="@@english">English</span>
         </mat-option>
