--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,10 +11,10 @@
       </mat-label>
       <mat-select [(value)]="localeId" (selectionChange)="switchLanguage($event)">
         <mat-option [value]="'en'">
-          <span i18n="@@english">English</span>
+          <span>English</span>
         </mat-option>
         <mat-option [value]="'vi'">
-          <span i18n="@@vienamese">Vienamese</span>
+          <span>Tiếng Việt</span>
         </mat-option>
       </mat-select>
     </mat-form-field>
