--- a/src/app/common/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/common/components/confirm-dialog/confirm-dialog.component.html
@@ -3,11 +3,11 @@
 </h2>
 <div md-dialog-content i18n="@@notification-alertDelete">Are you sure you want to delete?</div>
 <mat-dialog-actions align="end">
-    <button mat-button type="button" (click)="cancel()" i18n="@@notification-disagree">Agree</button>
+    <button mat-button type="button" (click)="cancel()" i18n="@@notification-disagree">Disagree</button>
     <button mat-button type="button" (click)="agree()" color="primary">
         <span class="material-icons">
             done
         </span>
-        <span i18n="@@notification-agree">Disagree</span>
+        <span i18n="@@notification-agree">Agree</span>
     </button>
 </mat-dialog-actions>
