--- a/src/app/modules/pages/components/home/home.component.scss
+++ b/src/app/modules/pages/components/home/home.component.scss
@@ -1,3 +1,6 @@
+//List variables for scss
+@import "~src/app/shares/scss/variables";
+
 .content {
     padding: 30px 0px;
     background-image: url("../.././../../../assets/img/icon-angular.png");
@@ -5,7 +8,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-    color: #3b3b3b;
+    color: $balckGreyColor;
     
     .detail {
         padding: 0px 15px;
