--- a/src/app/modules/todo/components/list-todo/list-todo.component.html
+++ b/src/app/modules/todo/components/list-todo/list-todo.component.html
@@ -36,7 +36,7 @@
             <mat-grid-tile>
                 <mat-form-field class="input-big" appearance="fill">
                     <mat-label>
-                        <span i18n="@@form-todo-label-content">
+                        <span i18n="@@form-todo-label-completed">
                             Completed
                         </span>
                     </mat-label>
@@ -54,7 +54,7 @@
 <mat-card>
     <h2 class="title" matDialogTitle>
         <span class="material-icons">table_chart</span>
-        <span class="text-icons-middle" i18n="@@block.table.title"> List Todo</span>
+        <span class="text-icons-middle" i18n="@@block.table.title">List Todo</span>
     </h2>
     <p>
         <button mat-button type="submit" (click)="addTodo()" color="primary">
@@ -73,7 +73,9 @@
         <!-- Content Column -->
         <ng-container matColumnDef="content">
             <th mat-header-cell *matHeaderCellDef i18n="@@block-table-row-content"> Content</th>
-            <td mat-cell *matCellDef="let element"> {{element.content}} </td>
+            <td mat-cell *matCellDef="let element">
+                <span class="line-limit" title="{{element.content}}" > {{element.content}} </span>
+            </td>
         </ng-container>
 
         <!-- Creator Column -->
@@ -84,10 +86,10 @@
 
         <!-- Completed Column -->
         <ng-container matColumnDef="completed">
-            <th style="width: 70px;" mat-header-cell *matHeaderCellDef i18n="@@block-table-row-completed">
-                Completed </th>
+            <th style="width: 70px;" mat-header-cell *matHeaderCellDef i18n="@@block-table-row-completed">Completed </th>
             <td class="text-center" mat-cell *matCellDef="let element">
-                <span *ngIf="element.completed" class="material-icons">done</span>
+                <mat-checkbox [checked]="element.completed" (change)="updateCompletedStatus($event.checked,element)" class="example-margin" >
+                </mat-checkbox>
             </td>
         </ng-container>
 
@@ -111,6 +113,6 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'line-text': row.completed}" ></tr>
     </table>
 </mat-card>
