--- a/src/app/modules/todo/components/form-todo/form-todo.component.html
+++ b/src/app/modules/todo/components/form-todo/form-todo.component.html
@@ -10,9 +10,12 @@
         </container-element>
         <span class="text-icons-middle">Todo</span>
     </h2>
-    
+
     <mat-form-field class="example-full-width">
-        <mat-label i18n="@@block-formTodo-labelTitle">Title</mat-label>
+        <mat-label>
+            <span i18n="@@block-formTodo-labelTitle">Title</span> 
+            <span class="red-color">*</span>
+        </mat-label>
         <input matInput cdkFocusInitial formControlName="title">
         <mat-error i18n="@@block-formTodo-messErrorRequiredTitle"
             *ngIf="data.todoForm?.get('title')?.errors?.required && data.todoForm?.get('title')?.touched">
@@ -28,25 +31,33 @@
         </mat-error>
     </mat-form-field>
     <mat-form-field class="example-full-width">
-        <mat-label i18n="@@block-formTodo-labelCreator">Creator</mat-label>
+        <mat-label>
+            <span i18n="@@block-formTodo-labelCreator">Creator</span> 
+            <span class="red-color">*</span>
+        </mat-label>
         <input matInput formControlName="creator">
         <mat-error i18n="@@block-formTodo-messErrorRequiredContent"
             *ngIf="data.todoForm?.get('creator')?.errors?.required && data.todoForm?.get('creator')?.touched">
             Content is required
         </mat-error>
-        <mat-error *ngIf="data.todoForm?.get('creator')?.hasError('maxlength') && data.todoForm?.get('creator')?.touched">
+        <mat-error
+            *ngIf="data.todoForm?.get('creator')?.hasError('maxlength') && data.todoForm?.get('creator')?.touched">
             <span i18n="@@block-formTodo-messErrorMaxlength">Max length is: </span>
             {{data.todoForm.get('creator')?.errors.maxlength.requiredLength}}
         </mat-error>
     </mat-form-field>
     <mat-form-field class="example-full-width">
-        <mat-label i18n="@@block-formTodo-labelContent">Content</mat-label>
+        <mat-label>
+            <span i18n="@@block-formTodo-labelContent">Content</span> 
+            <span class="red-color">*</span>
+        </mat-label>
         <textarea matInput formControlName="content"></textarea>
         <mat-error i18n="@@block-formTodo-messErrorRequiredContent"
             *ngIf="data.todoForm?.get('content')?.errors?.required && data.todoForm?.get('content')?.touched">
             Content is required
         </mat-error>
-        <mat-error *ngIf="data.todoForm?.get('content')?.hasError('maxlength') && data.todoForm?.get('content')?.touched">
+        <mat-error
+            *ngIf="data.todoForm?.get('content')?.hasError('maxlength') && data.todoForm?.get('content')?.touched">
             <span i18n="@@block-formTodo-messErrorMaxlength">Max length is: </span>
             {{data.todoForm.get('content')?.errors.maxlength.requiredLength}}
         </mat-error>
@@ -60,7 +71,7 @@
         <button mat-button type="button" (click)="cancel()" i18n="@@block-formTodo-cancel">Cancel</button>
         <button mat-button type="submit" color="primary" [disabled]="data.todoForm?.invalid || data.todoForm?.pending">
             <span class="material-icons">done</span>
-            <span class="text-icons-middle" i18n="@@block-formTodo-submit">  Submit  </span>
+            <span class="text-icons-middle" i18n="@@block-formTodo-submit"> Submit </span>
         </button>
     </mat-dialog-actions>
 </form>
