--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,20 @@
 <mat-toolbar class="header">
   <mat-toolbar-row class="space-between">
     <mat-toolbar-row>
-      <a [routerLink]="['/']"><img src="../assets/img/icon-angular.png" style="width:50px;"></a>
+      <a [routerLink]="['/']"
+        ><img src="../assets/img/icon-angular.png" style="width: 50px;"
+      /></a>
       <a mat-button [routerLink]="['todo/list']">Todo</a>
     </mat-toolbar-row>
     <mat-form-field class="input-big" appearance="fill">
       <mat-label>
-        <span style="font-size: 14px" class="material-icons">language</span>
+        <span style="font-size: 14px;" class="material-icons">language</span>
         <span class="text-icons-middle" i18n="@@language"> Language </span>
       </mat-label>
-      <mat-select [(value)]="localeId" (selectionChange)="switchLanguage($event)">
+      <mat-select
+        [(value)]="localeId"
+        (selectionChange)="switchLanguage($event)"
+      >
         <mat-option [value]="'en'">
           <span>English</span>
         </mat-option>
