--- a/src/app/common/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/common/components/confirm-dialog/confirm-dialog.component.html
@@ -1,13 +1,22 @@
 <h2 matDialogTitle i18n="@@notification-title">
-    Notification
+  Notification
 </h2>
-<div md-dialog-content i18n="@@notification-alertDelete">Are you sure you want to delete?</div>
+<div md-dialog-content i18n="@@notification-alertDelete">
+  Are you sure you want to delete?
+</div>
 <mat-dialog-actions align="end">
-    <button mat-button type="button" (click)="cancel()" i18n="@@notification-disagree">Disagree</button>
-    <button mat-button type="button" (click)="agree()" color="primary">
-        <span class="material-icons">
-            done
-        </span>
-        <span i18n="@@notification-agree">Agree</span>
-    </button>
+  <button
+    mat-button
+    type="button"
+    (click)="cancel()"
+    i18n="@@notification-disagree"
+  >
+    Disagree
+  </button>
+  <button mat-button type="button" (click)="agree()" color="primary">
+    <span class="material-icons">
+      done
+    </span>
+    <span i18n="@@notification-agree">Agree</span>
+  </button>
 </mat-dialog-actions>
