--- a/src/app/modules/todo/components/list-todo/list-todo.component.html
+++ b/src/app/modules/todo/components/list-todo/list-todo.component.html
@@ -1,118 +1,152 @@
 <mat-card>
-    <h2 class="title" matDialogTitle>
-        <span class="material-icons">filter_alt</span>
-        <span class="text-icons-middle" i18n="@@filter"> Filter </span>
-    </h2>
-    <form class="pading" [formGroup]="searchForm">
-        <mat-grid-list cols="2" rowHeight="70px">
-            <mat-grid-tile>
-                <mat-form-field class="input-big">
-                    <mat-label>
-                        <span i18n="@@form-todo-labelTitle">Title</span>
-                    </mat-label>
-                    <input matInput formControlName="title">
-                </mat-form-field>
-            </mat-grid-tile>
-            <mat-grid-tile>
-                <mat-form-field class="input-big">
-                    <mat-label>
-                        <span i18n="@@form-todo-label-creator">
-                            Creator
-                        </span>
-                    </mat-label>
-                    <input matInput formControlName="creator">
-                </mat-form-field>
-            </mat-grid-tile>
-            <mat-grid-tile>
-                <mat-form-field class="input-big">
-                    <mat-label>
-                        <span i18n="@@form-todo-label-content">
-                            Content
-                        </span>
-                    </mat-label>
-                    <input matInput formControlName="content">
-                </mat-form-field>
-            </mat-grid-tile>
-            <mat-grid-tile>
-                <mat-form-field class="input-big" appearance="fill">
-                    <mat-label>
-                        <span i18n="@@form-todo-label-completed">
-                            Completed
-                        </span>
-                    </mat-label>
-                    <mat-select formControlName="completed">
-                        <mat-option *ngFor="let itemFilter of completedFilters" [value]="itemFilter.value">
-                            {{itemFilter.label}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </mat-grid-tile>
-        </mat-grid-list>
-    </form>
+  <h2 class="title" matDialogTitle>
+    <span class="material-icons">filter_alt</span>
+    <span class="text-icons-middle" i18n="@@filter"> Filter </span>
+  </h2>
+  <form class="pading" [formGroup]="searchForm">
+    <mat-grid-list cols="2" rowHeight="70px">
+      <mat-grid-tile>
+        <mat-form-field class="input-big">
+          <mat-label>
+            <span i18n="@@form-todo-labelTitle">Title</span>
+          </mat-label>
+          <input matInput formControlName="title" />
+        </mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <mat-form-field class="input-big">
+          <mat-label>
+            <span i18n="@@form-todo-label-creator">
+              Creator
+            </span>
+          </mat-label>
+          <input matInput formControlName="creator" />
+        </mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <mat-form-field class="input-big">
+          <mat-label>
+            <span i18n="@@form-todo-label-content">
+              Content
+            </span>
+          </mat-label>
+          <input matInput formControlName="content" />
+        </mat-form-field>
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <mat-form-field class="input-big" appearance="fill">
+          <mat-label>
+            <span i18n="@@form-todo-label-completed">
+              Completed
+            </span>
+          </mat-label>
+          <mat-select formControlName="completed">
+            <mat-option
+              *ngFor="let itemFilter of completedFilters"
+              [value]="itemFilter.value"
+            >
+              {{ itemFilter.label }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </form>
 </mat-card>
 
 <mat-card>
-    <h2 class="title" matDialogTitle>
-        <span class="material-icons">table_chart</span>
-        <span class="text-icons-middle" i18n="@@block.table.title">List Todo</span>
-    </h2>
-    <p>
-        <button mat-button type="submit" (click)="addTodo()" color="primary">
-            <span class="material-icons">add</span>
-            <span class="text-icons-middle" i18n="@@button.add">Add</span>
+  <h2 class="title" matDialogTitle>
+    <span class="material-icons">table_chart</span>
+    <span class="text-icons-middle" i18n="@@block.table.title">List Todo</span>
+  </h2>
+  <p>
+    <button mat-button type="submit" (click)="addTodo()" color="primary">
+      <span class="material-icons">add</span>
+      <span class="text-icons-middle" i18n="@@button.add">Add</span>
+    </button>
+  </p>
+  <table mat-table [dataSource]="listTodo$ | async" class="mat-elevation-z8">
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef i18n="@@block-table-row-title">
+        Title
+      </th>
+      <td mat-cell *matCellDef="let element">{{ element.title }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="content">
+      <th mat-header-cell *matHeaderCellDef i18n="@@block-table-row-content">
+        Content
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <span class="line-limit" title="{{ element.content }}">
+          {{ element.content }}
+        </span>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="creator">
+      <th mat-header-cell *matHeaderCellDef i18n="@@block-table-row-creator">
+        Creator
+      </th>
+      <td mat-cell *matCellDef="let element">{{ element.creator }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="completed">
+      <th
+        style="width: 70px;"
+        mat-header-cell
+        *matHeaderCellDef
+        i18n="@@block-table-row-completed"
+      >
+        Completed
+      </th>
+      <td class="text-center" mat-cell *matCellDef="let element">
+        <mat-checkbox
+          [checked]="element.completed"
+          (change)="updateCompletedStatus($event.checked, element)"
+          class="example-margin"
+        >
+        </mat-checkbox>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="action">
+      <th style="width: 150px;" mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell class="text-center" *matCellDef="let element">
+        <button mat-button (click)="getInfoTodo(element.id)" color="primary">
+          <mat-icon
+            mat-button
+            class="item-action"
+            i18n-block-table-tooltip-edit
+            title="Edit"
+            class="example-icon"
+            aria-hidden="false"
+            aria-label="Edit icon"
+          >
+            edit
+          </mat-icon>
         </button>
-    </p>
-    <table mat-table [dataSource]="listTodo$ | async " class="mat-elevation-z8">
+        <button mat-button (click)="deleteTodo(element.id)">
+          <mat-icon
+            class="item-action"
+            data-toggle="tooltip"
+            i18n-block-table-tooltip-delete
+            title="Delete"
+            class="example-icon"
+            aria-hidden="false"
+            aria-label="Delete icon"
+          >
+            delete
+          </mat-icon>
+        </button>
+      </td>
+    </ng-container>
 
-        <!-- Title Column -->
-        <ng-container matColumnDef="title">
-            <th mat-header-cell *matHeaderCellDef i18n="@@block-table-row-title"> Title </th>
-            <td mat-cell *matCellDef="let element"> {{element.title}} </td>
-        </ng-container>
-
-        <!-- Content Column -->
-        <ng-container matColumnDef="content">
-            <th mat-header-cell *matHeaderCellDef i18n="@@block-table-row-content"> Content</th>
-            <td mat-cell *matCellDef="let element">
-                <span class="line-limit" title="{{element.content}}" > {{element.content}} </span>
-            </td>
-        </ng-container>
-
-        <!-- Creator Column -->
-        <ng-container matColumnDef="creator">
-            <th mat-header-cell *matHeaderCellDef i18n="@@block-table-row-creator"> Creator </th>
-            <td mat-cell *matCellDef="let element"> {{element.creator}} </td>
-        </ng-container>
-
-        <!-- Completed Column -->
-        <ng-container matColumnDef="completed">
-            <th style="width: 70px;" mat-header-cell *matHeaderCellDef i18n="@@block-table-row-completed">Completed </th>
-            <td class="text-center" mat-cell *matCellDef="let element">
-                <mat-checkbox [checked]="element.completed" (change)="updateCompletedStatus($event.checked,element)" class="example-margin" >
-                </mat-checkbox>
-            </td>
-        </ng-container>
-
-        <!-- Action Column -->
-        <ng-container matColumnDef="action">
-            <th style="width: 150px;" mat-header-cell *matHeaderCellDef> </th>
-            <td mat-cell class="text-center" *matCellDef="let element">
-                <button mat-button (click)="getInfoTodo(element.id)" color="primary">
-                    <mat-icon mat-button class="item-action" i18n-block-table-tooltip-edit title="Edit"
-                        class="example-icon" aria-hidden="false" aria-label="Edit icon">
-                        edit
-                    </mat-icon>
-                </button>
-                <button mat-button (click)=deleteTodo(element.id)>
-                    <mat-icon class="item-action" data-toggle="tooltip" i18n-block-table-tooltip-delete title="Delete"
-                        class="example-icon" aria-hidden="false" aria-label="Delete icon">
-                        delete
-                    </mat-icon>
-                </button>
-            </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'line-text': row.completed}" ></tr>
-    </table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr
+      mat-row
+      *matRowDef="let row; columns: displayedColumns"
+      [ngClass]="{ 'line-text': row.completed }"
+    ></tr>
+  </table>
 </mat-card>
