--- a/src/app/modules/todo/components/list-todo/list-todo.component.html
+++ b/src/app/modules/todo/components/list-todo/list-todo.component.html
@@ -1,71 +1,5 @@
-<mat-card>
-  <h2 class="title" matDialogTitle>
-    <span class="material-icons">filter_alt</span>
-    <span class="text-icons-middle" i18n="@@filter"> Filter </span>
-  </h2>
-  <form class="pading" [formGroup]="searchForm">
-    <mat-grid-list cols="2" rowHeight="70px">
-      <mat-grid-tile>
-        <mat-form-field class="input-big">
-          <mat-label>
-            <span i18n="@@form-todo-labelTitle">Title</span>
-          </mat-label>
-          <input matInput formControlName="title" />
-        </mat-form-field>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <mat-form-field class="input-big">
-          <mat-label>
-            <span i18n="@@form-todo-label-creator">
-              Creator
-            </span>
-          </mat-label>
-          <input matInput formControlName="creator" />
-        </mat-form-field>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <mat-form-field class="input-big">
-          <mat-label>
-            <span i18n="@@form-todo-label-content">
-              Content
-            </span>
-          </mat-label>
-          <input matInput formControlName="content" />
-        </mat-form-field>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <mat-form-field class="input-big" appearance="fill">
-          <mat-label>
-            <span i18n="@@form-todo-label-completed">
-              Completed
-            </span>
-          </mat-label>
-          <mat-select formControlName="completed">
-            <mat-option
-              *ngFor="let itemFilter of completedFilters"
-              [value]="itemFilter.value"
-            >
-              {{ itemFilter.label }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </mat-grid-tile>
-    </mat-grid-list>
-  </form>
-</mat-card>
+  <table mat-table [dataSource]="listTodo" class="mat-elevation-z8">
 
-<mat-card>
-  <h2 class="title" matDialogTitle>
-    <span class="material-icons">table_chart</span>
-    <span class="text-icons-middle" i18n="@@block.table.title">List Todo</span>
-  </h2>
-  <p>
-    <button mat-button type="submit" (click)="addTodo()" color="primary">
-      <span class="material-icons">add</span>
-      <span class="text-icons-middle" i18n="@@button.add">Add</span>
-    </button>
-  </p>
-  <table mat-table [dataSource]="listTodo$ | async" class="mat-elevation-z8">
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef i18n="@@block-table-row-title">
         Title
@@ -80,7 +14,7 @@
       <td mat-cell *matCellDef="let element">
         <span class="line-limit" title="{{ element.content }}">
           {{ element.content }}
-        </span>
+        </span> 
       </td>
     </ng-container>
 
@@ -113,7 +47,7 @@
     <ng-container matColumnDef="action">
       <th style="width: 150px;" mat-header-cell *matHeaderCellDef></th>
       <td mat-cell class="text-center" *matCellDef="let element">
-        <button mat-button (click)="getInfoTodo(element.id)" color="primary">
+        <button mat-button (click)="updateTodo(element.id)" color="primary">
           <mat-icon
             mat-button
             class="item-action"
@@ -149,4 +83,3 @@
       [ngClass]="{ 'line-text': row.completed }"
     ></tr>
   </table>
-</mat-card>
