--- a/src/app/modules/todo/pages/list-todo-page/list-todo.component.html
+++ b/src/app/modules/todo/pages/list-todo-page/list-todo.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <app-filter-todo (changeValueFilter)="changeFilter($event)"></app-filter-todo>
+  <app-filter-todo (changeFilterValue)="changeFilterValue($event)"></app-filter-todo>
 </mat-card>
 <mat-card>
   <h2 class="title" matDialogTitle>
