--- a/src/app/modules/todo/components/list-todo/list-todo.component.html
+++ b/src/app/modules/todo/components/list-todo/list-todo.component.html
@@ -1,85 +1,114 @@
-  <table mat-table [dataSource]="listTodo" class="mat-elevation-z8">
+<table mat-table [dataSource]="listTodo" class="mat-elevation-z8">
+  <ng-container matColumnDef="title">
+    <th mat-header-cell *matHeaderCellDef i18n="@@block-table-row-title">
+      Title
+    </th>
+    <td mat-cell *matCellDef="let element">{{ element.title }}</td>
+  </ng-container>
 
-    <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef i18n="@@block-table-row-title">
-        Title
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.title }}</td>
-    </ng-container>
+  <ng-container matColumnDef="content">
+    <th mat-header-cell *matHeaderCellDef i18n="@@block-table-row-content">
+      Content
+    </th>
+    <td mat-cell *matCellDef="let element">
+      <span class="line-limit" title="{{ element.content }}">
+        {{ element.content }}
+      </span>
+    </td>
+  </ng-container>
 
-    <ng-container matColumnDef="content">
-      <th mat-header-cell *matHeaderCellDef i18n="@@block-table-row-content">
-        Content
-      </th>
-      <td mat-cell *matCellDef="let element">
-        <span class="line-limit" title="{{ element.content }}">
-          {{ element.content }}
-        </span> 
-      </td>
-    </ng-container>
+  <ng-container matColumnDef="creator">
+    <th mat-header-cell *matHeaderCellDef i18n="@@block-table-row-creator">
+      Creator
+    </th>
+    <td mat-cell *matCellDef="let element">{{ element.creator }}</td>
+  </ng-container>
 
-    <ng-container matColumnDef="creator">
-      <th mat-header-cell *matHeaderCellDef i18n="@@block-table-row-creator">
-        Creator
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.creator }}</td>
-    </ng-container>
+  <ng-container matColumnDef="createdDate">
+    <th
+      class="text-center"
+      style="width: 100px;"
+      mat-header-cell
+      *matHeaderCellDef
+      i18n="@@block-table-row-createdDate"
+    >
+      Created date
+    </th>
+    <td class="text-center no-padding" mat-cell *matCellDef="let element">
+      {{ element.createdDate | date: "MM/dd/yyyy" }}
+    </td>
+  </ng-container>
 
-    <ng-container matColumnDef="completed">
-      <th
-        style="width: 70px;"
-        mat-header-cell
-        *matHeaderCellDef
-        i18n="@@block-table-row-completed"
+  <ng-container matColumnDef="deadline">
+    <th
+      class="text-center"
+      style="width: 100px;"
+      mat-header-cell
+      *matHeaderCellDef
+      i18n="@@block-table-row-deadline"
+    >
+      Deadline
+    </th>
+    <td class="text-center no-padding" mat-cell *matCellDef="let element">
+      {{ element.deadLine | date: "MM/dd/yyyy" }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="completed">
+    <th
+      class="text-center"
+      style="width: 70px;"
+      mat-header-cell
+      *matHeaderCellDef
+      i18n="@@block-table-row-completed"
+    >
+      Completed
+    </th>
+    <td class="text-center no-padding" mat-cell *matCellDef="let element">
+      <mat-checkbox
+        [checked]="element.completed"
+        (change)="updateCompletedStatus($event.checked, element)"
       >
-        Completed
-      </th>
-      <td class="text-center" mat-cell *matCellDef="let element">
-        <mat-checkbox
-          [checked]="element.completed"
-          (change)="updateCompletedStatus($event.checked, element)"
-          class="example-margin"
+      </mat-checkbox>
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="action">
+    <th style="width: 150px;" mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell class="text-center" *matCellDef="let element">
+      <button mat-button (click)="updateTodo(element.id)" color="primary">
+        <mat-icon
+          mat-button
+          class="item-action"
+          i18n-block-table-tooltip-edit
+          title="Edit"
+          class="example-icon"
+          aria-hidden="false"
+          aria-label="Edit icon"
         >
-        </mat-checkbox>
-      </td>
-    </ng-container>
+          edit
+        </mat-icon>
+      </button>
+      <button mat-button (click)="deleteTodo(element.id)">
+        <mat-icon
+          class="item-action"
+          data-toggle="tooltip"
+          i18n-block-table-tooltip-delete
+          title="Delete"
+          class="example-icon"
+          aria-hidden="false"
+          aria-label="Delete icon"
+        >
+          delete
+        </mat-icon>
+      </button>
+    </td>
+  </ng-container>
 
-    <ng-container matColumnDef="action">
-      <th style="width: 150px;" mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell class="text-center" *matCellDef="let element">
-        <button mat-button (click)="updateTodo(element.id)" color="primary">
-          <mat-icon
-            mat-button
-            class="item-action"
-            i18n-block-table-tooltip-edit
-            title="Edit"
-            class="example-icon"
-            aria-hidden="false"
-            aria-label="Edit icon"
-          >
-            edit
-          </mat-icon>
-        </button>
-        <button mat-button (click)="deleteTodo(element.id)">
-          <mat-icon
-            class="item-action"
-            data-toggle="tooltip"
-            i18n-block-table-tooltip-delete
-            title="Delete"
-            class="example-icon"
-            aria-hidden="false"
-            aria-label="Delete icon"
-          >
-            delete
-          </mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr
-      mat-row
-      *matRowDef="let row; columns: displayedColumns"
-      [ngClass]="{ 'line-text': row.completed }"
-    ></tr>
-  </table>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr
+    mat-row
+    *matRowDef="let row; columns: displayedColumns"
+    [ngClass]="{ 'line-text': row.completed }"
+  ></tr>
+</table>
