--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,125 +1,155 @@
 /* You can add global styles to this file, and also import other style files */
+
 html,
 body {
-  height: 100%;
+	height: 100%;
 }
+
 body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+	margin: 0;
+	font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
+
 .body {
-  padding: 30px 0px;
-  background-color: #f7f7f7;
-  min-height: calc(100vh - 76px);
+	padding: 30px 0px;
+	background-color: #f7f7f7;
+	min-height: calc(100vh - 76px);
 }
+
 .header {
-  background-color: #3064d8;
-  color: white;
-  font-size: 14px;
+	background-color: #3064d8;
+	color: white;
+	font-size: 14px;
 }
+
 .red-color {
-  color: #dc3545;
+	color: #dc3545;
 }
+
 .text-center {
-  text-align: center;
+	text-align: center !important;
 }
+
+.no-padding {
+	padding: 0px !important;
+}
+
 .space-between {
-  justify-content: space-between;
+	justify-content: space-between;
 }
+
 .material-icons {
-  vertical-align: middle;
+	vertical-align: middle;
 }
+
 .text-icons-middle {
-  vertical-align: middle;
+	vertical-align: middle;
 }
+
 .line-text {
-  text-decoration: line-through;
+	text-decoration: line-through;
 }
+
 .content-block-default,
 mat-card {
-  margin-top: 30px;
-  background-color: white;
-  border-radius: 5px;
-  padding: 15px;
-  box-shadow: 0 1px 7px 1px #f7f7f7;
-
-  .title {
-    padding: 5px 0px;
-    font-size: 20px;
-    font-weight: bold;
-    color: #dc3545;
-  }
+	margin-top: 30px;
+	background-color: white;
+	border-radius: 5px;
+	padding: 15px;
+	box-shadow: 0 1px 7px 1px #f7f7f7;
+	.title {
+		padding: 5px 0px;
+		font-size: 20px;
+		font-weight: bold;
+		color: #dc3545;
+	}
 }
+
 form {
-  color: #464646;
-  &.padding {
-    padding: 0px 15px;
-  }
-
-  .example-full-width {
-    width: 100%;
-  }
-  .input-big {
-    width: 80%;
-  }
+	color: #464646;
+	&.padding {
+		padding: 0px 15px;
+	}
+	.example-full-width {
+		width: 100%;
+	}
+	.input-big {
+		width: 80%;
+	}
 }
+
 table[mat-table] {
-  table-layout: fixed;
-  width: 100%;
-  box-shadow: 0 1px 7px 1px #f7f7f7;
-
-  td {
-    word-break: break-word;
-    padding: 10px 10px 10px 0px;
-
-    .line-limit {
-      display: -webkit-box;
-      max-height: 60px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      line-clamp: 3;
-      -webkit-line-clamp: 3;
-      box-orient: vertical;
-      -webkit-box-orient: vertical;
-    }
-    .item-action {
-      display: inline-block;
-      width: 25px;
-      height: 25px;
-      font-weight: bold;
-      cursor: pointer;
-      transition: 0.2s transform, 0.5s color;
-    }
-  }
+	table-layout: fixed;
+	width: 100%;
+	box-shadow: 0 1px 7px 1px #f7f7f7;
+	td {
+		word-break: break-word;
+		padding: 10px 10px 10px 0px;
+		.line-limit {
+			display: -webkit-box;
+			max-height: 60px;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			line-clamp: 3;
+			-webkit-line-clamp: 3;
+			box-orient: vertical;
+			-webkit-box-orient: vertical;
+		}
+		.item-action {
+			display: inline-block;
+			width: 25px;
+			height: 25px;
+			font-weight: bold;
+			cursor: pointer;
+			transition: 0.2s transform, 0.5s color;
+		}
+	}
 }
+
+.mat-form-field-appearance-fill {
+	.mat-form-field-flex {
+		padding: 0px !important;
+	}
+}
+
+.mat-form-field-appearance-fill {
+	.mat-form-field-flex {
+		background-color: rgba(0, 0, 0, 0);
+	}
+}
+
 .container {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+	width: 100%;
+	padding-right: 15px;
+	padding-left: 15px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 @media (min-width: 576px) {
-  .container {
-    max-width: 540px;
-  }
+	.container {
+		max-width: 540px;
+	}
 }
+
 @media (min-width: 768px) {
-  .container {
-    max-width: 720px;
-  }
+	.container {
+		max-width: 720px;
+	}
 }
+
 @media (min-width: 992px) {
-  .container {
-    max-width: 960px;
-  }
+	.container {
+		max-width: 960px;
+	}
 }
+
 @media (min-width: 1200px) {
-  .container {
-    max-width: 1140px;
-  }
+	.container {
+		max-width: 1140px;
+	}
 }
